# psilocybin-prl-analyses

./: .gitignore  CLAUDE.md  README.md  config.py  environment_gpu.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cluster/: 00_setup_env_gpu.sh  01_diagnostic_gpu.slurm  04_fit_mcmc_gpu.slurm  05_validation_gpu.slurm  06_analysis.slurm  08_power_sweep.slurm  09_power_postprocess.slurm  14_benchmark_gpu.slurm  14_valid03_cpu.slurm  14_valid03_gpu.slurm  16_smoke_test_cpu.slurm  16_smoke_test_gpu.slurm  18_smoke_patrl_cpu.slurm  requirements-gpu.txt  submit_full_pipeline.sh  submit_power_pipeline.sh
cluster/logs/: bench14_54797884.err  bench14_54797884.out  bench14_54801839.err  bench14_54801839.out  bench14_54899264.err  bench14_54899264.out  patrl18smoke_54893705.out  patrl18smoke_54894259.err  patrl18smoke_54894259.out  patrl18smoke_54896739.err  patrl18smoke_54896739.out  power_54765994_0.err  power_54765994_0.out  power_54768427_0.err  power_54768427_0.out  smoke16_54839157.err  smoke16_54839157.out  smoke16_54847649.err  smoke16_54847649.out  smoke16cpu_54882395.out  smoke16cpu_54882398.err  smoke16cpu_54882398.out  smoke16cpu_54892232.err  smoke16cpu_54892232.out  valid03_cpu_54797885.err  valid03_cpu_54797885.out  valid03_cpu_54801840.err  valid03_cpu_54801840.out  valid03_gpu_54797886.err  valid03_gpu_54797886.out  (+2 more)
configs/: pat_rl.yaml  prl_analysis.yaml
docs/: PAT_RL_API_HANDOFF.md
manuscript/: paper.qmd
scripts/: 03_simulate_participants.py  06_group_analysis.py  07b_run_recoverability_surface.py  08_run_power_iteration.py  09_run_prechecks.py  10_plot_power_curves.py  11_write_recommendation.py  12_smoke_patrl_foundation.py  smoke_local_cpu.py  smoke_test.sh  smoke_test_pipeline.py
tests/: test_agent.py  test_bms.py  test_env_pat_rl_config.py  test_export_trajectories.py  test_fit_vb_laplace_patrl.py  test_group_analysis.py  test_hierarchical_logp.py  test_hierarchical_patrl.py  test_laplace_idata.py  test_models.py  test_models_patrl.py  test_pat_rl_simulator.py  test_power_config.py  test_power_contrasts.py  test_power_grid.py  test_power_iteration.py  test_response.py  test_smoke_patrl_foundation.py  test_trial_sweep.py  test_valid04_simulation_equivalence.py  test_vbl06_laplace_vs_nuts.py
validation/: valid03_cross_platform.py  vbl06_laplace_vs_nuts.py
(+162 files in other folders)
